# ClawInboxRAG

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
clawinboxrag/: __init__.py  legacy_adapter.py  parity_harness.py
docs/: PHASE1_READONLY_ADAPTER.md  PHASE2_PARITY_VALIDATION.md  RELEASE_CHECKLIST.md
gmail_rag/: chunking.py  cli.py  config.py  db.py  embed.py  extract.py  gmail_client.py  semantic.py
references/: commands.md  security.md  setup.md  troubleshooting.md
scripts/: run_cli.sh  run_phase2_parity.py
skill/: README.md
skill/references/: commands.md  setup.md  troubleshooting.md
tests/: test_legacy_adapter.py  test_phase2_parity.py  test_status.py
